--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 </div>
                                 </div>
                             </span>
-                <img src="img/res-thumb.jpg" alt="Some alt text"/>
+                <img src="img/Res-thumb.jpg" alt="Some alt text"/>
             </a>
              <!-- <figcaption>
                 <strong>
@@ -103,7 +103,7 @@
                                 </div>
                                 </div>
                 </span>
-                <img src="img/sesame-thumb.jpg" alt="Some alt text"/>
+                <img src="img/Sesame-thumb.jpg" alt="Some alt text"/>
             </a>
              <!-- <figcaption>
                 <strong>
