change image size

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/respond.min.js"></script>
 
     <link rel="stylesheet" href="colorbox.css" />
-    <script src="../jquery.colorbox.js"></script>
+    <script src="jquery.colorbox.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <script type="text/javascript" src="application.js"></script>
@@ -53,13 +53,13 @@
         <figure>
             <a class"project" href="resource.html">
                 <span class="thumb-screen"></span>
-                <img src="img/Res-thumb.jpg" alt="Some alt text"/>
+                <img src="img/resource-thumb-large.jpg" alt="Some alt text"/>
             </a>
           <figcaption>
                 <strong>
-                <a href="http://www.rebeccalewisdesign.com"> Resource Magazine</a>
+                <a class"project" href="resource.html"> Resource Magazine</a>
                 </strong>
-                Editorial Design
+                Selected spreads from three issues of Resource Magazine: "The Perils of Working as a War Correspondent" and "Siren Studios."
                 </figcaption>
             </figure>
     </article>
@@ -67,26 +67,18 @@
     <article class="img-item">
         <figure>
             <a href="">
-                <span class="thumb-screen">
-                      <div id="hover">
-                            <div class="info">
-                                <p class="project">Girl Scout Online Shop</p>
-                                    <hr>    
-                                    <p class="dates">Web Design</p>
-                                </div>
-                                </div>
-                </span>
-                <img src="img/GS-Shop-thumb.jpg" alt="Some alt text"/>
+                <span class="thumb-screen"></span>
+                <img src="img/website-design-girl-scouts-thumb.jpg" alt="Some alt text"/>
             </a>
           <figcaption>
                 <strong>
-                Photo by: Some Name
+                Girlscoutshop.com
                 </strong>
-                warf es einen letzten Blick zurück auf die Skyline seiner Heimatstadt Buchstabhausen
+                Website design and landing pages for the newly relaunched Girlscoutshop.com, along with additional email marketing to support the site and Girl Scout Merchandise sales.
                 </figcaption>
             </figure>
     </article>
-    
+    <!-- 
     <article class="img-item">
         <figure>
             <a href="">
@@ -178,6 +170,7 @@
     </article>
     <br class="clear"/>
 </section>
+!-->
 
 <!-- Footer Section !-->
 
