--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" href="reset.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans|Baumans' rel='stylesheet' type='text/css'/>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans|Baumans" rel="stylesheet" type="text/css"/>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
