--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ here</a> for more information about freelance jobs and take a look at some of my
 <section id="three_columns">
     <article class="img-item">
         <figure>
-            <a class "project" href="resource.html">
+            <a class= "project" href="resource.html">
                 <span class="thumb-screen">
                            <!-- <div class="info">
                                 <p class="project">Resource Magazine</p>
