fix a class project

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ here</a> for more information about freelance jobs and take a look at some of my
             </a>
            <figcaption>
                 <strong>
-                <a class "project" href="resource.html"> Resource Magazine</a>
+                <a class= "project" href="resource.html"> Resource Magazine</a>
                 </strong>
                 Editorial
                 </figcaption>
