add product pages

--- a/girl-scout-shop.html
+++ b/girl-scout-shop.html
@@ -33,18 +33,18 @@
             <div id="logo" class="container">
             <img src="img/RL-logo.png" alt="Logo"> 
          </div>
-            <h1>Resource Magazine</h1>
-            <h2>Editorial Design<h2>
-            <p>Selected spreads from the spring 2011 issue of Resource Magazine: "The Perils of Working as a War Correspondent" and "Siren Studios.</p>
+            <h1>Girl Scout Shop</h1>
+            <h2>Art Direction, Web Design<h2>
+            <p>Website design and landing pages for the newly relaunched Girlscoutshop.com, along with additional email marketing to support the site and Girl Scout Merchandise sales.</p>
         </div>
 
         <a class= "home" href="index.html">&#60;</a>
-        <a class= "next" href="girl-scout-shop.html">&#62;</a>
+        <a class= "next" href="index.html">&#62;</a>
 
         <div class="rightColumn">
-            <img src="img/perils-1.jpg" alt="Some alt text"/>
-            <img src="img/perils-2.jpg" alt="Some alt text"/>
-            <img src="img/siren.jpg" alt="Some alt text"/>
+            <img src="img/shop_pg1.jpg" alt="Some alt text"/>
+            <img src="img/shop_pg2.jpg" alt="Some alt text"/>
+            <img src="img/shop_pg3.jpg" alt="Some alt text"/>
         </div>
     </div>
 
