--- a/index.html
+++ b/index.html
@@ -51,15 +51,8 @@
 <section id="three_columns">
     <article class="img-item">
         <figure>
-            <a class= "" href="resource.html">
-                <span class="thumb-screen">
-                           <!-- <div class="info">
-                                <p class="project">Resource Magazine</p>
-                                    <hr>    
-                                    <p class="genre">Editorial Design</p>
-                                </div>
-                                </div>!-->
-                            </span>
+            <a href="resource.html">
+
                 <img src="img/resource-thumb-large.jpg" alt="Some alt text"/>
             </a>
            <figcaption>
@@ -73,11 +66,10 @@
 
     <article class="img-item">
         <figure>
-            <a href="">
-                <span class="thumb-screen"></span>
+            <a href="girl-scout-shop.html">
                 <img src="img/website-design-girl-scouts-thumb.jpg" alt="Some alt text"/>
             </a>
-          <figcaption>
+        <figcaption>
                 <strong>
                 Girlscoutshop.com
                 </strong>
