--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <script src="js/respond.min.js"></script>
     <!--<script src="jquery.colorbox.js"></script>!-->
     
-    <!--<script type="text/javascript" src="application.js"></script>!-->
+    <script type="text/javascript" src="application.js"></script>
 
-
-  </head>
+    </head>
 
   <body>
     <header>
@@ -51,9 +50,8 @@
 <section id="three_columns">
     <article class="img-item">
         <figure>
-            <a href="resource.html">
-
-                <img src="img/resource-thumb-large.jpg" alt="Some alt text"/>
+            <a class="projectlink" href="resource.html">
+                <img src="img/resource-thumb-large.jpg" class="projectimage" alt="Some alt text"/>
             </a>
            <figcaption>
                 <strong>
@@ -66,7 +64,7 @@
 
     <article class="img-item">
         <figure>
-            <a href="girl-scout-shop.html">
+            <a class="projectimage" href="girl-scout-shop.html">
                 <img src="img/website-design-girl-scouts-thumb.jpg" alt="Some alt text"/>
             </a>
         <figcaption>
