--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <article class="img-item">
         <figure>
-            <a class="projectimage" href="girl-scout-shop.html">
+            <a class="" href="girl-scout-shop.html">
                 <img src="img/website-design-girl-scouts-thumb.jpg" alt="Some alt text"/>
             </a>
         <figcaption>
