--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </a>
            <figcaption>
                 <strong>
-                <a class= "" href="resource.html"> Resource Magazine</a>
+                <a class= "projectlinks" href="resource.html"> Resource Magazine</a>
                 </strong>
                 Editorial
                 </figcaption>
@@ -69,7 +69,7 @@
             </a>
         <figcaption>
                 <strong>
-                Girlscoutshop.com
+                <a class= "projectlinks" href="girl-scout-shop.html"> Girlscoutshop.com</a>
                 </strong>
                 Web Design
                 </figcaption>
@@ -92,7 +92,7 @@
             </a>
             <figcaption>
                 <strong>
-                Sesame Street
+                <a class= "projectlinks" href=""> Sesame Street</a>
                 </strong>
                 Product Design
             </figcaption>
@@ -107,7 +107,7 @@
             </a>
              <figcaption>
                 <strong>
-                Starter Kit Bags
+                <a class= "projectlinks" href=""> Starter Kit Bags</a>
                 </strong>
                 Product Design
             </figcaption>
