--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
     
         <h1 class= "introtext">
-            Hello! My name is Rebecca Lewis. I am a Brooklyn based web and graphic designer. Contact me <a href="mailto:lewisr89@gmail.com?Subject=Hello%20again" target="_top">
+            Hello! My name is Rebecca Lewis and I am a Brooklyn based web & graphic designer. Contact me <a href="mailto:lewisr89@gmail.com?Subject=Hello%20again" target="_top">
             here</a> for more information about freelance jobs and take a look at some of my work below. 
         </h1>
     </header>
