--- a/about.html
+++ b/about.html
@@ -34,14 +34,13 @@
         <nav>
             <ul>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="index.html">Portfolio</a></li>
             </ul>
         </nav>
     
         <h1 class= "introtext">
-            Hello! My name is Rebecca Lewis. I am a Brooklyn based web & graphic designer. Contact me <a href="mailto:lewisr89@gmail.com?Subject=Hello%20again" target="_top">
-            here</a> for more information about freelance jobs and take a look at some of my work below. 
+            As a graduate from Parsons with a BFA in Graphic Design and five years of hands-on experience, I am a dedicated and versatile designer with great attention to detail. Currently I am working for Girl Scouts of the USA in New York City as the Senior E-commerce web designer in their merchandising department. For further information, download my resume here 
         </h1>
     </header>
 
