--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav>
             <ul>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="index.html">Portfolio</a></li>
             </ul>
         </nav>
